# ancilla-bot

./: .env.example  .gitignore  Dockerfile.sandbox  README.md  pyproject.toml  requirements.txt
ancilla_bot/: discord_bot.py  personal_model.py  slack_bot.py
ancilla_bot/ambient/: __init__.py  aggregator.py  base.py  collectors.py
ancilla_bot/api/: server.py  stt_client.py  tts_client.py  ws_server.py
ancilla_bot/batch/: __init__.py  summarize.py  vector_store.py
ancilla_bot/cli/: main.py
ancilla_bot/core/: agent_loop.py  cancel.py  reflection.py
ancilla_bot/heartbeat/: __init__.py  db.py
ancilla_bot/llm/: __init__.py  ollama_client.py  schemas.py  tool_adapter.py
ancilla_bot/memory/: __init__.py  compress.py  conversation_store.py  core.py  session_store.py  short_term.py
ancilla_bot/notifications/: __init__.py  pending_take.py  store.py
ancilla_bot/plugins/: __init__.py  base.py  loader.py
ancilla_bot/plugins/learning/: __init__.py
ancilla_bot/plugins/meeting/: __init__.py
ancilla_bot/proactive/: __init__.py  engine.py  throttle.py
ancilla_bot/tools/: bash.py  end_edge_session.py  fetch_page.py  get_audio.py  get_image.py  get_image_from_camera.py  notify_user.py  registry.py  run_script.py  schemas.py  tasks.py  use_edgedevice.py  workspace_io.py
data/prompts/: CHARACTER.md  TOOLS.md  TOOLS.native.md
docs/: ws_client_api.md
scripts/: run_batch_summarize.ps1  run_batch_summarize.sh
src/ancilla_bot/: __init__.py
src/ancilla_bot/cli/: __init__.py  (+1 more)
workspace/: AGENT.md  AGENT.native.md
workspace/memory/: AGENT.md  NOTE.md  USER.md
(+9 files in other folders)
