[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ancilla-bot"
version = "0.1.0"
description = "AIエージェント"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pydantic",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["."]
