[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ancilla-bot"
version = "0.1.0"
description = "AIエージェント"
requires-python = ">=3.11"
dependencies = [
    "chromadb",
    "discord.py",
    "httpx",
    "pydantic",
    "python-dotenv",
    "pyyaml",
    "slack-bolt",
    "websockets",
]

[project.scripts]
ancilla = "ancilla_bot.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
